--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!DOCTYPE html>
+<head> 
+  <style>
+  .text{
+    .desgin{
+            background-color: aquamarine;
+            border: 10px;
+            border-style:groove;
+            stroke: burlywood;
+        }
+    }
+  </style>
+</head>
+<body>
+  <h1 class="design">
+    Website under developement
+  </h1>
+  <p>
+    Aaron's bot website is still a work in progress
+  </p>
+</body>
