--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   </style>
 </head>
 <body>
-  <h1 class="design">
+  <div class="design">
+  <h1>
     Website under developement
   </h1>
   <p>
     Aaron's bot website is still a work in progress
   </p>
+  </div>
 </body>
