--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <head> 
   <style>
   .text{
-    .desgin{
             background-color: aquamarine;
             border: 10px;
             border-style:groove;
             stroke: burlywood;
-        }
     }
   </style>
 </head>
 <body>
-  <div class="design">
+  <div class="text">
   <h1>
     Website under developement
   </h1>
