--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </style>
 </head>
 <body>
-  <div class="text">
-  <h1>
+  <div>
+  <h1 class="text">
     Website under developement
   </h1>
   <p>
