--- a/index.html
+++ b/index.html
@@ -3,60 +3,10 @@
 
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlackJack</title>
+    <title>thing</title>
     <link rel="stylesheet" href="style.css">
-    <script src="cards.js"></script>
+    <script src="script.js"></script>
 </head>
-
 <body>
-    <div class="board">
-        <ul id="pre-ul">
-            <li>Dealer</li>
-            <li>You</li>
-        </ul>
-        <div id="pre-game">
-            <a onClick="youCard()">
-                <h1 id="HIT">HIT</h1>
-                <img src="PNG/gray_back.png" alt="Card FaceDown">
-                <img src="PNG/gray_back.png" alt="Card FaceDown" style="transform: translate(-30px, 300px); z-index: 1;">
-                <img id="hitChosen" src="PNG/gray_back.png" alt="Card FaceDown" style="transform: translate(-0px, 300px); z-index: 1;">
-                <img src="PNG/card_deck.png" alt="Card deck" style="transform: translate(60px, 550px); width: 60px">
-                <h2 id="card_count">52</h2>
-            </a>
-            <ul>
-                <div id="deal">
-                    <!--DEALER CARD GOES HERE-->
-                </div>
-                <div id="you" onClick="stand()">
-                    <h1 id="STAND">STAND</h1>
-                    <a id="youA">
-                        <!--YOUR CARD GOES HERE-->
-                    </a>
-                </div>
-            </ul>
-        </div>
-    </div>
-    <a onClick="betAmt()" style="z-index: 100;" id="addAmt"><img style="z-index: 100;" id="addAmtImg" src="PNG/chip.png"></a>
-    <a onClick="doubleDown()" id="addChip" class="okbro">
-        <!--CHIPS GO BELOW-->
-        <h1 id="DOUBLE">DOUBLE</h1>
-    </a>
-    <div>
-        <h2 style="position: absolute; color: honeydew; margin-left: 50%; font-size: 50px; transform: translate(25px, -197px);"
-            id="bet">0</h2>
-        <img src="PNG/chip.png" style="width: 50px; transform: translate(-25px, -150px);">
-    </div>
-    <div onclick="newGame()" id="start-btn">
-        <a>START</a>
-    </div>
-
-    <div id="player-info">
-        <div class="player-txt">
-            <h1>You</h1>
-            <h2 id="balance">Bal: $500</h2>
-        </div>
-    </div>
-
+  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
 </body>
-
-</html>
